@@ -11,6 +11,7 @@ void AddSC_zone_zuldrak_groupquests();
 void AddSC_go_scripts_groupquests();
 
 void AddSC_item_spell_scripts_groupquests();
+void AddSC_quest_spell_scriptsk_groupquests();
 
 void Addmod_groupquestsScripts()
 {
@@ -27,4 +28,5 @@ void Addmod_groupquestsScripts()
     AddSC_go_scripts_groupquests();
 
     AddSC_item_spell_scripts_groupquests();
+    AddSC_quest_spell_scriptsk_groupquests();
 }
